# garagem

./: pyproject.toml
config/: settings.py  urls.py
garagem_app/: apps.py
garagem_app/migrations/: 0001_initial.py  0002_cor_modelo_veiculo.py  0003_remove_veiculo_acessorio_veiculo_acessorio.py
garagem_app/models/: __init__.py  acessorio.py  cor.py  modelo.py  veiculo.py
garagem_app/serializers/: acessorio.py  cor.py  modelo.py  veiculo.py
garagem_app/views/: acessorio.py  cor.py  modelo.py  veiculo.py
